2010-10-28  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/alerts/alert_list.php,
	godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_templates.php, godmode/alerts/alert_actions.php,
	godmode/alerts/alert_commands.php: now in the source code pick more info in
	the audit for actions to create, update and delete profiles and user, and
	for action to add and remove profiles to user.

2010-10-28  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/javascript/jquery.ui.datepicker.js, include/javascript/jquery.js,
	include/javascript/jquery.ui.core.js,
	include/javascript/tiny_mce/tiny_mce_popup.js,
	include/javascript/OpenLayers/OpenLayers.js,
	include/javascript/jquery.ui.resizable.js,
	include/javascript/jquery.timeentry.js: : delete unpacked source code of js.
	
	* include/functions_alerts.php: added header comment to function
	"create_alert_action".
	
	* godmode/alerts/alert_list.php: fixed the return status for message status
	in actions "delete_alert", "add_action" and "delete_action".

2010-10-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_custom_graphs.php
	godmode/reporting/graph_builder.preview.php: Fixed various bugs when
	you try to render a custom graph without modules for bug 3096434

2010-10-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_io.php
	include/functions_ui.php: Fixed the html setting in the header 
	for the dashboard bug 3094692 

2010-10-27  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/javascript/jquery.ui.datepicker.js,
	include/javascript/jquery.ui.core.js: fixed end of lines that it haven't
	semicolon end char.

2010-10-27  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/agentes/modificar_agente.php,
	godmode/agentes/configurar_agente.php:  now in the source code pick more
	info in the audit for actions to create, update and delete agent, and in
	other hand for the actions to create, update, duplicate and delete module.
