@@ -1,3 +1,8 @@
+2010-10-29  Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* godmode/massive/massive_delete_profiles.php: fixed result message of
+	operation. And cleaned source code style.
+
 2010-10-28  Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* godmode/alerts/alert_list.php,
